fix: css bug on smaller window sizes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,6 +34,7 @@ body {
   .container {
     grid-template-columns: repeat(2, 1fr);
     gap: 0px;
+    margin-bottom: 200px;
   }
 }
 
